--- a/webapp/view/Usuarios.view.xml
+++ b/webapp/view/Usuarios.view.xml
@@ -4,7 +4,8 @@
 	xmlns:core="sap.ui.core"
 	xmlns="sap.m">
 	<Table id="tablaUsuarios"
-		items="{modeloLocalUsuarios>/}">
+           items="modeloLocalUsuarios" >
+
 		<headerToolbar>
 			<OverflowToolbar>
 				<Title text="Products" level="H2"/>
