--- a/webapp/view/Usuarios.view.xml
+++ b/webapp/view/Usuarios.view.xml
@@ -5,24 +5,32 @@
 	xmlns="sap.m"
     xmlns:fb="sap.ui.comp.filterbar" >
 
-    <fb:FilterBar reset="onReset" search="onSearch" showRestoreButton="false" showClearButton="false">
+<VBox >
+    <fb:FilterBar reset="onReset" search="onSearch" showRestoreButton="true" showClearButton="true">
 			<fb:filterGroupItems>
-				<fb:FilterGroupItem groupName="__$INTERNAL$" name="A" label="Delivery Date" partOfCurrentVariant="true" visibleInFilterBar="true">
+				<fb:FilterGroupItem groupName="__$INTERNAL$" name="A" label="Usuario" mandatory="true" partOfCurrentVariant="true" visibleInFilterBar="true">
 					<fb:control>
-						<DatePicker/>
+						<Input/>
 					</fb:control>
 				</fb:FilterGroupItem>
 
 				<fb:FilterGroupItem groupName="__$INTERNAL$" name="B" label="Tipo de usuario" labelTooltip="Tooltip Example" mandatory="true" partOfCurrentVariant="true" visibleInFilterBar="true">
 					<fb:control>
-						<Select>
-							<items>
-								<core:Item text="Jugador"/>
-								<core:Item text="Moderador"/>
-							</items>
-						</Select>
+						<ComboBox items="{/UsuariosSet}" >
+                            <core:Item key="{TipoUser}" text="{TipoUser}" />
+						</ComboBox>
 					</fb:control>
 				</fb:FilterGroupItem>
+
+				<fb:FilterGroupItem groupName="__$INTERNAL$" name="C" label="Nivel" labelTooltip="Tooltip Example" mandatory="true" partOfCurrentVariant="true" visibleInFilterBar="true">
+					<fb:control>
+						<ComboBox selectedKey="{a}" items="{a}" >
+                            <core:Item key="{a}" text="{a}" />
+						</ComboBox>
+					</fb:control>
+				</fb:FilterGroupItem>
+
+
 
 				<fb:FilterGroupItem groupName="G1" groupTitle="Group1" name="A1" label="Company" labelTooltip="Tooltip GroupItem Example">
 					<fb:control>
@@ -50,7 +58,7 @@
 			</fb:filterGroupItems>
 
 	    </fb:FilterBar>
-
+</VBox>
 
 
 	<Table id="tablaUsuarios"
@@ -106,7 +114,7 @@
                     <ObjectIdentifier title="{modeloLocalUsuarios>NombreUser}"/>
                     <Text text="{modeloLocalUsuarios>Nivel}"/>
                     <Text text="{modeloLocalUsuarios>TipoUser}"/>
-                    <Button text="Edit" press="onEdit"/>
+                    <Button text="Edit" press="EditarUsuarioFragment"/>
                     <Button type="Reject" icon="sap-icon://delete" press="onDelete"/>
 
 				</cells>
